metadata/force-app/main/default/objects/CustomName_WUqTt__c/CustomName_WUqTt__c.object-meta.xml
<CustomObject>
    <description>Description_LUsiv</description>
    <label>CustomLabel_WMIMD</label>
    <nameField>
        <label>CustomLabel_WMIMD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WMIMDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>