metadata/force-app/main/default/objects/CustomName_WUqTt__c/fields/CustomField_OaBbw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_OaBbw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldobcaV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>